[gd_scene load_steps=4 format=3 uid="uid://2wjbywmpv4ca"]

[ext_resource type="Script" path="res://Scripts/numbers_panel.gd" id="1_55seg"]
[ext_resource type="FontFile" uid="uid://djas1d503biej" path="res://Assets/Fonts/PixicaMono-Wide.ttf" id="2_u82lo"]

[sub_resource type="LabelSettings" id="LabelSettings_by6at"]
font = ExtResource("2_u82lo")
font_color = Color(0.823953, 0.0405853, 0, 1)

[node name="NumbersPanel" type="CanvasLayer"]
script = ExtResource("1_55seg")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.5
offset_top = -129.0
offset_right = 224.5
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -20.0
offset_right = 140.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Number1" type="LineEdit" parent="Panel/BoxContainer"]
layout_mode = 2
placeholder_text = "#"
alignment = 1
max_length = 1

[node name="Number2" type="LineEdit" parent="Panel/BoxContainer"]
layout_mode = 2
text = "4"
placeholder_text = "#"
alignment = 1
max_length = 1
editable = false

[node name="Number3" type="LineEdit" parent="Panel/BoxContainer"]
layout_mode = 2
text = "5"
placeholder_text = "#"
alignment = 1
max_length = 1
editable = false

[node name="Number4" type="LineEdit" parent="Panel/BoxContainer"]
layout_mode = 2
text = "8"
placeholder_text = "#"
alignment = 1
max_length = 1
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = 42.0
offset_right = 63.5
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2

[node name="Open" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Abrir"

[node name="Cancel" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Cancelar"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.5
offset_top = 46.0
offset_right = 130.5
offset_bottom = 69.0
grow_horizontal = 2
text = "Inserta la contraseña de la puerta"

[node name="WarningLabel" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.5
offset_top = -35.0
offset_right = 68.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
text = "Código Incorrecto"
label_settings = SubResource("LabelSettings_by6at")
horizontal_alignment = 1

[connection signal="pressed" from="Panel/HBoxContainer/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
